# agents

./: .gitignore  AGENTS.md  README.md
research-agent/: README.md  instructions.md  main.py  pyproject.toml
research-agent-ts/: README.md  package.json  tsconfig.json
research-agent-ts/src/: index.ts  instructions.md
